--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  height: 100vh;
+  height: 95vh;
   aspect-ratio: 1 / 1;
   margin: auto;
 }
@@ -14,4 +14,10 @@
 .square {
   flex-grow: 1;
   border: 1px solid black;
+}
+
+button {
+  display: block;
+  width: 100px;
+  margin: 4px auto;
 }
